Conserto da mudanca de data que não estaa funcionando.E outras pequenas coisas